Ajds before final img integration

--- a/belinsky_luana.html
+++ b/belinsky_luana.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/slider-pro.min.css"/>
 <link rel="stylesheet" href="assets/css/streetslider.css"/>
 <script src="assets/js/street-ism-2.2.min.js"></script>
-  <title>Luana Belinsky</title>
+  <title>Luana Bélinsky</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -56,6 +56,10 @@
     </div>
     <div class="container">
     <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span> Artiste.lol</a>
+  </div>
+  <div style="margin-top: 5%;"class="container"> 
+    <a style="margin-left: 3%; text-decoration: underline" href="ARTISTEPRECEDENT.HTML">Précédent</a>
+    <a style="margin-right: 3%; text-decoration: underline;"  href="ARTISTESUIVANT.HTML">Suivant</a>
   </div>
   </nav>
 
@@ -122,7 +126,7 @@
         <div class="col-sm-6">
           <p class="mb-1">&copy; Vous ne pouvez, en aucun cas, imprimer, reproduire, ou publier les vidéos et photos présentées sur ce site sans une permission écrite.</p>
           <div style="position: relative;" class="credits">
-            Médias Interactifs (UQÀM) - 2022
+            <p><img style="width: 16px; " src="assets/img/logo.png"><img> Médias Interactifs (UQÀM) - 2022</p>
           </div>
         </div>
         <div class="col-sm-6 social text-md-end">
