photos, liens insta et archive

--- a/barday_andy.html
+++ b/barday_andy.html
@@ -55,11 +55,11 @@
     </a>
     </div>
     <div class="container">
-    <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span> Artiste.lol</a>
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/poulet_bleu/"><span class="bi bi-instagram"></span> @poulet_bleu</a>
   </div>
   <div style="margin-top: 5%;"class="container"> 
-    <a style="margin-left: 3%; text-decoration: underline" href="ARTISTEPRECEDENT.HTML">Précédent</a>
-    <a style="margin-right: 3%; text-decoration: underline;"  href="ARTISTESUIVANT.HTML">Suivant</a>
+    <p style="margin-left: 3%";></p>
+    <a style="margin-right: 3%; text-decoration: underline;"  href="belinsky_luana.html">Suivant</a>
   </div>
   </nav>
 
@@ -76,7 +76,8 @@
                 <div class="sp-slides">
                   <!-- Slide 1 -->
                   <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/barday_andy/archive.jpg"/>
+                    <a href="https://www.wallpaperflare.com/aerial-photography-of-round-building-apple-park-architecture-wallpaper-ejpgn" target="_blank">
+                    <img class="sp-image" src="/artistes/barday_andy/archive.jpg"/></a>
                   </div>
                   
                   <!-- Slide 2 -->
@@ -104,10 +105,10 @@
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
-                <h3 style="margin-top: 4%;" class="h3">TITRE</h3>
+                <h3 style="margin-top: 4%;" class="h3">Architecture</h3>
                 <p class="mb-4"><span class="text-muted">Espace</span></p>
                 <div class="mb-5">
-                  <p>Au cours des années, les enjeux et les méthodes des infrastructures ont changés. Nous cherchons a nous adapter et être durable.</p>
+                  <p>Au cours des années, les enjeux et les méthodes des infrastructures ont changé. Nous cherchons à nous adapter et être durable.</p>
 
                 </div>
               </div>
