--- a/belinsky_luana.html
+++ b/belinsky_luana.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/slider-pro.min.css"/>
 <link rel="stylesheet" href="assets/css/streetslider.css"/>
 <script src="assets/js/street-ism-2.2.min.js"></script>
-  <title>Luana Bélinsky</title>
+  <title>Luana Belinsky</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,11 +55,11 @@
     </a>
     </div>
     <div class="container">
-    <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span> Artiste.lol</a>
+    <a class="artistlink" target="_blank" href="https://www.instagram.com/cadavre_xquis_/"><span class="bi bi-instagram"></span> @cadavre_xquis_</a>
   </div>
   <div style="margin-top: 5%;"class="container"> 
-    <a style="margin-left: 3%; text-decoration: underline" href="ARTISTEPRECEDENT.HTML">Précédent</a>
-    <a style="margin-right: 3%; text-decoration: underline;"  href="ARTISTESUIVANT.HTML">Suivant</a>
+    <a style="margin-left: 3%; text-decoration: underline" href="barday_andy.html">Précédent</a>
+    <a style="margin-right: 3%; text-decoration: underline;"  href="goyette_antoine.html">Suivant</a>
   </div>
   </nav>
 
@@ -76,7 +76,8 @@
                 <div class="sp-slides">
                   <!-- Slide 1 -->
                   <div class="sp-slide">
-                    <img onclick="FullSkreen()" class="sp-image" src="/artistes/belinsky_luana/archive.jpg"/>
+                    <a href="https://numerique.banq.qc.ca/patrimoine/details/52327/3279168?docsearchtext=Couloir%20maison" target="_blank">
+                    <img class="sp-image" src="/artistes/belinsky_luana/archive.jpg"/></a>
                   </div>
                   
                   <!-- Slide 2 -->
