--- a/beuzen_alexandre.html
+++ b/beuzen_alexandre.html
@@ -55,11 +55,11 @@
     </a>
     </div>
     <div class="container">
-    <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span> Artiste.lol</a>
+   <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
   </div>
   <div style="margin-top: 5%;"class="container"> 
-    <a style="margin-left: 3%; text-decoration: underline" href="ARTISTEPRECEDENT.HTML">Précédent</a>
-    <a style="margin-right: 3%; text-decoration: underline;"  href="ARTISTESUIVANT.HTML">Suivant</a>
+    <a style="margin-left: 3%; text-decoration: underline" href="larue_kevin">Précédent</a>
+    <a style="margin-right: 3%; text-decoration: underline;"  href="meunier_sebastien.html">Suivant</a>
   </div>
   </nav>
 
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
-                <h3 style="margin-top: 4%;" class="h3"></h3>
+                <h3 style="margin-top: 4%;" class="h3">Transition de l'été à l'automne</h3>
                 <p class="mb-4"><span class="text-muted">Espace</span></p>
                 <div class="mb-5">
                   <p></p>
