--- a/iframe.html
+++ b/iframe.html
@@ -42,6 +42,7 @@ window.onload = function fadeOutEffect() {
         }
     }, 40);
 } 
+
 </script>
   <!-- ======= Navbar ======= -->
 
@@ -70,6 +71,8 @@ window.onload = function fadeOutEffect() {
 
           <div style="margin: auto;" class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
 			  <div style="text-align: center;"id="filters" class="filters">
+
+
         
 			  <span onclick="culture()"><a href="#" data-filter=".culture" class="active">Culture</a></span>
         <span onclick="espace()"><a href="#" data-filter=".espace">Espace</a></span>
@@ -85,6 +88,7 @@ window.onload = function fadeOutEffect() {
         <div data-aos="fade-up">
         </div>
         <script>
+
 function intro() {
   var espace = document.getElementById("esp");
   var medias = document.getElementById("med");
@@ -129,232 +133,215 @@ function medias() {
 }
           </script>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-		<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+		<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./yoshy_roseline.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Retour vers le futur</h3>
+                <span>Roseline C. Yoshy</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/yoshy_roseline/thumbnail.jpg">
             </a>
           </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+          <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./fournier_marianne.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Troisième vague</h3>
+                <span>Marianne Fournier</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/fournier_marianne/thumbnail.jpg">
             </a>
           </div>
-			<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./rochefort_elianne.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Sur-Vivre</h3>
+                <span>Élianne Rochefort</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/rochefort_elianne/thumbnail.jpg">
             </a>
           </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./rossignol_thomas.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>L'activisme climatique</h3>
+                <span>Thomas Rossignol</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/rossignol_thomas/thumbnail.jpg">
             </a>
           </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./godbout_marianne.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Traces</h3>
+                <span>Marianne Godbout</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/godbout_marianne/thumbnail.jpg">
             </a>
           </div>
-			<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./thonont_edo.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Faire Un</h3>
+                <span>Edo Thonont</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/thonont_edo/thumbnail.jpg">
             </a>
           </div>
-			<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./turcotte_rosalie.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Le Timeliner</h3>
+                <span>Rosalie Turcotte</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/turcotte_rosalie/thumbnail.jpg">
             </a>
           </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./lamer_vickie.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Il était plusieurs fois</h3>
+                <span>Vickie Lamer</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/lamer_vickie/thumbnail.jpg">
             </a>
           </div>
-			<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./barday_andy.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Architecture</h3>
+                <span>Andy Barday</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/barday_andy/thumbnail.jpg">
             </a>
           </div>
-			<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+			 <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./belinsky_luana.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Liminal</h3>
+                <span>Luana Belinsky</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/belinsky_luana/thumbnail.jpg">
             </a>
           </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+			 <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./goyette_antoine.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Ville d'histoire</h3>
+                <span>Antoine Goyette</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/goyette_antoine/thumbnail.jpg">
             </a>
           </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+        <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./lariviere_benjamin.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Les ponts du temps</h3>
+                <span>Benjamin Larivière</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/lariviere_benjamin/thumbnail.jpg">
             </a>
-          </div>
-			<div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+          </div>  
+         <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./larue_kevin.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Le Bonsecours</h3>
+                <span>Kevin La Rue</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/larue_kevin/thumbnail.jpg">
             </a>
-          </div>
-			<div class="item autre col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+          </div> 
+         <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./beuzen_alexandre.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Transition de l'été à l'automne</h3>
+                <span>Alexandre Beuzen</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/beuzen_alexandre/thumbnail.jpg">
             </a>
-          </div>
-			<div class="item culture col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+          </div>  
+           <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./meunier_sebastien.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Maquette d'un nouveau Montréal</h3>
+                <span>Sébastien Meunier</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/meunier_sebastien/thumbnail.jpg">
             </a>
           </div>
-			<div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./ducharme_maika.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Deuxième vie</h3>
+                <span>Maïka Ducharme</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/ducharme_maika/thumbnail.jpg">
             </a>
           </div>
-			<div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+           <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./pilon_fabrice.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Temps mort</h3>
+                <span>Fabrice Pilon</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/pilon_fabrice/thumbnail.jpg">
             </a>
           </div>
-			<div class="item autre col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+            <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./charron_xavier.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Temporel</h3>
+                <span>Xavier Charron</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/charron_xavier/thumbnail.jpg">
             </a>
           </div>
-			<div class="item autre col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+            <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./racine_jeremy.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Au revoir acoustique</h3>
+                <span>Jérémy Racine</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/racine_jeremy/thumbnail.jpg">
             </a>
           </div>
-			<div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+            <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./moubarik_younesse.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Musique électronique</h3>
+                <span>Younesse Moubarik</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/moubarik_younesse/thumbnail.jpg">
             </a>
           </div>
-			<div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+            <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./perreault_anais.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Accès à l'information médiatique</h3>
+                <span>Anais Perreault</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/perreault_anais/thumbnail.jpg">
             </a>
           </div>
-			<div class="item autre col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+            <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./martinezdiaz_andy.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>De l'achat au streaming</h3>
+                <span>Andy Martinez Diaz</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/martinezdiaz_andy/thumbnail.jpg">
             </a>
           </div>
-			<div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
-              <div class="work-info">	
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
-              </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
-            </a>
-          </div>
-			<div class="item autre col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
+            <div class="item medias col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="./ziehmann_eric.html"  class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
+                <h3>Clash des technologies</h3>
+                <span>Eric Ziehmann</span>
               </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
+              <img class="img-fluid" src="artistes/ziehmann_eric/thumbnail.jpg">
             </a>
           </div>
-			<div class="item espace col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="./street.html"  class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Titre du projet</h3>
-                <span>Nom de l'artiste</span>
-              </div>
-              <img class="img-fluid" src="assets/thumbnails/dummy.png">
-            </a>
-          </div>
-			
+
+
 					
 	  </div>
 	  </div>
