--- a/yoshy_roseline.html
+++ b/yoshy_roseline.html
@@ -55,11 +55,11 @@
     </a>
     </div>
     <div class="container">
-    <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span> Artiste.lol</a>
+    <!-- <a class="artistlink" target="_blank" href="https://instagram.com/mi.uqam"><span class="bi bi-instagram"></span></a> -->
   </div>
   <div style="margin-top: 5%;"class="container"> 
-    <a style="margin-left: 3%; text-decoration: underline" href="ARTISTEPRECEDENT.HTML">Précédent</a>
-    <a style="margin-right: 3%; text-decoration: underline;"  href="ARTISTESUIVANT.HTML">Suivant</a>
+    <p style="margin-left: 3%;"></p>
+    <a style="margin-right: 3%; text-decoration: underline;"  href="fournier_marianne.html">Suivant</a>
   </div>
   </nav>
 
@@ -127,10 +127,10 @@
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="container">
-                <h3 style="margin-top: 4%;" class="h3">Histoires de famille</h3>
+                <h3 style="margin-top: 4%;" class="h3">Retour vers le futur</h3>
                 <p class="mb-4"><span class="text-muted">Culture</span></p>
                 <div class="mb-5">
-                  <p>Accès privilégié dans les archives de la famille Archambault-Cuddihy-Yoshy. Le Retour vers le Futur immortalise le rapport au temps avec une touche humoristique. À quoi ressemblerait ces mêmes photos dans un avenir rapproché ? </p>
+                  <p>Accès privilégié dans les archives de la famille Archambault-Cuddihy-Yoshy. Le Retour vers le Futur immortalise le rapport au temps avec une touche humoristique. À quoi ressembleraient ces mêmes photos dans un avenir rapproché ? </p>
 
                 </div>
               </div>
