--- a/iframe.html
+++ b/iframe.html
@@ -29,21 +29,32 @@
 
 <body>
 <script>
-window.onload = function fadeOutEffect() {
-    var fadeTarget = document.getElementById("loading");
-    var fadeEffect = setInterval(function () {
-        if (!fadeTarget.style.opacity) {
-            fadeTarget.style.opacity = 1;
-        }
-        if (fadeTarget.style.opacity > 0) {
-            fadeTarget.style.opacity -= 0.1;
-        } else {
-            clearInterval(fadeEffect);
-        }
-    }, 40);
-} 
+
+setInterval(function fadeOutEffect() {
+  document.getElementById("culturebut").click();
+      }, 500);
+
+
+
 
 </script>
+
+<script>
+  window.onload = function clickculture() {
+      var fadeTarget = document.getElementById("loading");
+      var fadeEffect = setInterval(function () {
+          if (!fadeTarget.style.opacity) {
+              fadeTarget.style.opacity = 1;
+          }
+          if (fadeTarget.style.opacity > 0) {
+              fadeTarget.style.opacity -= 0.1;
+          } else {
+              clearInterval(fadeEffect);
+          }
+      }, 40);
+  } 
+  
+  </script>
   <!-- ======= Navbar ======= -->
 
   <nav class="navbar navbar-light custom-navbar">
@@ -74,7 +85,7 @@ window.onload = function fadeOutEffect() {
 
 
         
-			  <span onclick="culture()"><a href="#" data-filter=".culture" class="active">Culture</a></span>
+			  <span  onclick="culture()"><a id="culturebut" href="#" data-filter=".culture" class="active">Culture</a></span>
         <span onclick="espace()"><a href="#" data-filter=".espace">Espace</a></span>
 			  <span onclick="medias()"><a href="#"  data-filter=".medias">Médias</a></span>
             </div>
@@ -93,8 +104,8 @@ function intro() {
   var espace = document.getElementById("esp");
   var medias = document.getElementById("med");
   var culture = document.getElementById("cult");
-  var intro = document.getElementById("intro");
-  intro.style.display = "block";
+ 
+ 
   culture.style.display = "none";
   espace.style.display = "none";
   medias.style.display = "none";
@@ -104,8 +115,8 @@ function culture(){
   var espace = document.getElementById("esp");
   var medias = document.getElementById("med");
   var culture = document.getElementById("cult");
-  var intro = document.getElementById("intro");
-  intro.style.display = "none";
+
+  
   culture.style.display = "block";
   espace.style.display = "none";
   medias.style.display = "none";
@@ -115,8 +126,8 @@ function espace() {
   var espace = document.getElementById("esp");
   var medias = document.getElementById("med");
   var culture = document.getElementById("cult");
-  var intro = document.getElementById("intro");
-  intro.style.display = "none";
+ 
+  
   culture.style.display = "none";
   espace.style.display = "block";
   medias.style.display = "none";
