--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <body>
         
-        <video style="position: absolute; margin: auto; margin-top: -10%; width: 100%;" autoplay muted loop id="myVideo">
+        <video id="homevid" style="position: absolute; margin: auto; margin-top: -10%; width: 100%;" autoplay muted loop id="myVideo">
             <source src="vid.mp4" type="video/mp4">
           </video>
 
@@ -37,7 +37,10 @@
             function EnterSite() {
   var x = document.getElementById("content");
   var y = document.getElementById("enter");
+  var homevid =document.getElementById("homevid");
 
+
+homevid.style.display= "none";
   y.style.display = "none";
     x.style.display = "block";
 }
