--- a/about.html
+++ b/about.html
@@ -47,21 +47,55 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Mi22</h2>
-            <a class="mb-0">***********</a>
+            <h2>Jean-François Renaud</h2>
+            <a style="font-size: 14px;"class="mb-0">Directeur de programme (Medias interactifs (UQÀM))</a>
 			</div>
         </div>
      
 	  </div>
 		
-		<div class="container">
-		<p>AAAAAAAAAAAAAAAAAAA</p>	
-			<p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA <br> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-			<p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br> aaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA<br> AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
-			<p>AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAArAAAAAAAAAAAAAAAAAA</p>
-			
+		<div style="font-size: 16px;"class="container" data-aos="fade-up">
+		<p>
+      Lorsque l’on prend le temps de valider le sens du terme « hystérésis », on comprend l’intérêt que ce thème a pu présenter pour les concepteurs du magazine. D’une manière générale, on peut tenter de définir une hystérèse comme l’impact subtil qu’aurait une force extérieure sur quelque chose et qui permettrait de mettre en lumière une transformation progressive au fil du temps. 
+    </p>	
+			<p>
+        Plusieurs phénomènes physiques rendent compte de cette opération, très universelle au fond, et facilement observable, notamment en raison de nos dispositions cognitives, qui sont particulièrement fondées sur des logiques de causalité. Prenons le cas d’une surface plissée, dont on estime la morphologie en devinant les actions continues aux mêmes endroits. Ces pressions sur la matière auront tôt fait de laisser des marques, témoignant à la fois de l’usure, du temps écoulé et de l’usage qui a été fait de l’objet, qu’il s’agisse d’un coussin, d’un fauteuil ou d’un vêtement. 
+      </p>
+      <p>
+        Or, et en termes plus métaphoriques, on est amené à projeter le sens du procédé à tout ce qui recoupe une évolution dans le temps, en l’abordant comme un principe généralisé : la mutation, la transformation, les déformations, pas seulement des choses ou des êtres, mais des idées et des concepts. Le procédé d’hystérèse est donc applicable à la notion d’image comme forme d’expression médiatique.  
+      </p>
+      <p>
+        Le concept d’image, dans son essence même se présente plus que jamais comme une notion au contour imprécis, où les repères habituels qui servent à la définir nous échappent progressivement. Il s’agit d’une révolution au plan ontologique. L’image est-elle toujours en lien avec une réalité qui lui sert de référent ? Est-elle toujours reçue comme une surface plane et bidimensionnelle, comme une médiatisation matériellement tangible, comme un artefact distinct de l’espace tridimensionnel où elle prend place ? À toutes ces questions, on peut désormais répondre « pas obligatoirement ».
+      </p>
+      <p>
+        Les technologies auxquelles les étudiants-es du programme de médias interactifs sont confrontés viennent en effet brouiller les cartes d’un territoire jadis bien défini par le support analogique du média. Lors des premiers cours que j’ai offerts à l’École des médias, on parlait naïvement d’images fixes ou d’images animées. D’images 2D ou d’images 3D. Savez-vous que ces frontières conceptuelles sont désormais dissolues ? Je me souviens avoir mentionné à titre d’exemple un GIF animé de deux photogrammes. Est-ce une image fixe ou animée ? Et le mapping vidéo sur des surfaces qui ne sont pas planes, s’agit-il d’images pouvant être interprétées comme des écrans ou comme des objets volumétriques ? À quel point sont-elles reçues comme indépendantes des mondes observés et expérimentés ? 
+      </p>
+      <p>
+        Bref, un monde s’ouvre à nos étudiants-es, et ce magazine constitue une toute première occasion de se mesurer à ces nouvelles dimensions conceptuelles, pour le plus grand plaisir de chacun. 
+        </p>
+        <p>
+          Jean-François Renaud, Ph. D. 
+Professeur titulaire en médias interactifs 
+Directeur responsable du programme de Baccalauréat en communication (création médias - médias interactifs) 
+        </p>
 		</div>
-                
+  </br>
+</br>   
+</br>   
+    <div class="container" data-aos="fade-up">
+      <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Intégration Web</h2>
+      <style>.wavy-text{filter:url('#wavy')}</style><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Edo XCX</h1>
+      <h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Luana Bélinsky</h1>
+      <h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Marianne Fournier</h1>
+<svg width="100%" height="100%" style="display:none;">
+<defs>
+<filter id="wavy" filterUnits="userSpaceOnUse" x="0" y="0">
+<feTurbulence id="wave-animation" numOctaves="1" seed="3" baseFrequency="0 0"></feTurbulence>
+<feDisplacementMap scale="10" in="SourceGraphic"></feDisplacementMap>
+</filter><animate xlink:href="#wave-animation" attributeName="baseFrequency" dur="3s" keyTimes="0;0.5;1" values="0.0 0.04;0.0 0.07;0.0 0.04" repeatCount="indefinite"></animate>
+</defs>
+</svg>
+</div>
     </section><!-- End  Works Section -->
 
     <!-- Wrapper for slides -->
