--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <video id="homevid" style="position: absolute; margin: auto; margin-top: -10%; width: 100%;" autoplay muted loop id="myVideo">
             <source src="vid.mp4" type="video/mp4">
           </video>
+          <div class="container">
+            <p class="mb-0" style="font-size: 25px; font-family: remboy; margin: 0 auto; position: absolute; max-width: 800px; top: 30%; left: 0; right: 0; text-align: center;">Constatations, critiques et espoirs cohabitent dans un portrait nuancé de notre génération qui invite à penser à notre contribution aux prochaines hystérésis. </p>
+        </div>
 
 		<script>
             function PlayMain() {
@@ -53,6 +56,8 @@ homevid.style.display= "none";
                 };
                 </script> -->
             <audio id="audio_main" src="assets/sounds/ambient.mp3" loop></audio>
+
+            
         <div style="margin-left: -70px; position: fixed; top: 50%; left: 50%; text-align: center;"id="enter">
             
             <p class="mb-0"><button class="enter" onclick="EnterSite();PlayMain()">Entrer</button></p>
