Links to insta on web creds

--- a/about.html
+++ b/about.html
@@ -84,9 +84,9 @@ Directeur responsable du programme de Baccalauréat en communication (création 
 </br>   
     <div class="container" data-aos="fade-up">
       <h2 style="letter-spacing: 8px; text-decoration: underline; font-size: 16px">Intégration Web</h2>
-      <style>.wavy-text{filter:url('#wavy')}</style><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Edo XCX</h1>
-      <h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Luana Bélinsky</h1>
-      <h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Marianne Fournier</h1>
+      <style>.wavy-text{filter:url('#wavy')}</style><a  target="_blank" href="https://www.instagram.com/edo_xcx/" ><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Edo XCX</h1></a>
+      <a target="_blank" href="https://www.instagram.com/cadavre_xquis_/" ><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Luana Bélinsky</h1></a>
+      <a target="_blank" href="https://www.instagram.com/_mariannefournier_/" ><h1 style="letter-spacing: 4px; font-size: 15px;"class="wavy-text">Marianne Fournier</h1></a>
 <svg width="100%" height="100%" style="display:none;">
 <defs>
 <filter id="wavy" filterUnits="userSpaceOnUse" x="0" y="0">
