--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Jean-François Renaud</h2>
-            <a style="font-size: 14px;"class="mb-0">Directeur de programme (Medias interactifs (UQÀM))</a>
+            <h2>Un thème porteur et utile pour réfléchir au rôle de l’image et à son évolution </h2>
+            
 			</div>
         </div>
      
@@ -70,11 +70,21 @@
       <p>
         Bref, un univers s’ouvre à nos étudiants-es, et ce magazine constitue une toute première occasion de se mesurer à ces nouvelles dimensions conceptuelles, pour le plus grand plaisir de chacun. 
       </p>
-        <p>
+      <br>
+      <div class="row mb-5 align-items-center">
+        <div class="col-md-12 col-lg-5 mb-4 mb-lg-0" data-aos="fade-up">
+        <a class="mb-0">
           Jean-François Renaud, Ph. D. 
+          <br>
 Professeur titulaire en médias interactifs 
+<br>
 Directeur responsable du programme de Baccalauréat en communication (création médias - médias interactifs) 
-        </p>
+        </a>
+        </div>
+        <div class="col-md-12 col-lg-5 mb-4 mb-lg-0" data-aos="fade-up">
+          <img style="width: 34%;" src="assets/img/jfr.jpg">
+          </div>
+        </div>
 		</div>
   </br>
 </br>   
